<resources>
    <string name="app_name">Olympic Athletes</string>
    <string name="internet_connection_unavailable">Internet connection unavailable</string>
    <string name="server_error">Server error</string>
    <string name="reload">Reload</string>
    <string name="no_games">- No Games! -</string>
    <string name="no_athletes">- No Athletes! -</string>
    <string name="photo_url">https://test-ocs.herokuapp.com/athletes/%s/photo</string>
    <string name="medals">Medals</string>
    <string name="bio">Bio</string>
</resources>